tests/tests/neg/config/test-config02.rs
#![flux::opts(5)] //~ ERROR invalid attribute: unsupported item

#[flux::sig(fn(x: i32, y: i32) -> i32)]
pub fn test(x: i32, y: i32) -> i32 {
    x / y
}
